--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Josefin Slab', serif;
 }
 a {
     text-decoration: none;
@@ -16,7 +16,7 @@ li {
     border: 1px solid #fff;
     background-color: #fff;
     border-radius: 50px;
-    padding: 10px 20px;
+    padding: 15px 40px;
 }
 .btn-color {
     border-color: orangered;
@@ -62,6 +62,13 @@ li {
     padding: 10px;
 }
 
+.logo a {
+    color: black;
+    font-family: 'IM Fell English SC', serif;
+    font-size: 2em;
+}
+
+
 /* Intro Styles */
 header {
     background-image: url(/images/intro-bg.jpg);
@@ -92,6 +99,24 @@ header {
     justify-content: space-between;
     align-content: center;
     padding: 1.2em 3em;
+}
+
+/* About Section*/
+
+#about img{
+    width: 30em;
+    height: 25em;
+    border: 1px solid #000;
+}
+
+
+.mission-container {
+    margin: 10% auto;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 70%;
+    justify-content: space-evenly;
+    
 }
 
 
