--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -16,7 +16,7 @@ li {
     border: 1px solid #fff;
     background-color: #fff;
     border-radius: 50px;
-    padding: 15px 40px;
+    padding: 1rem 2rem;
 }
 .btn-color {
     border-color: orangered;
